Changed some css

--- a/index.css
+++ b/index.css
@@ -493,4 +493,7 @@ html{
         margin-left: 20%;
         margin-right: 20%;
     }   
+    #introSectionH1{
+        font-size: medium;
+    }
 }
